--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://flourd.com/pkg/toml"
   },
   "license": "ISC",
-  "description": "Familiar parse and stringify, for TOML. Now with a basic CLI that converts to/from JSON.",
+  "description": "Familiar parse and stringify for TOML, with a CLI to convert to/from JSON.",
   "main": "./index.js",
   "module": "./index.mjs",
   "esnext": "./index.mjs",
@@ -82,13 +82,12 @@
     "./types": "./index.d.ts"
   },
   "bin": {
-    "toml": "./bin/parse.js"
+    "toml": "./bin/toml.js"
   },
   "scripts": {
-    "test": "tap -J --100 test/*.js test/toml-stream/*.js",
-    "prerelease": "yarn test",
     "prepack": "rm -f *~",
-    "postpublish": "git push --follow-tags"
+    "postpublish": "git push --follow-tags",
+    "cli": "node ./bin/toml"
   },
   "keywords": [
     "toml",
@@ -108,8 +107,6 @@
     "arg": "~5.0.1"
   },
   "devDependencies": {
-    "@iarna/standard": "^2.0.2",
-    "@ltd/j-toml": "^0.5.107",
     "ansi": "^0.3.1",
     "approximate-number": "^2.0.0",
     "glob": "^7.1.2",
